# pyimage2pdf

./: .gitignore  .mypi.ini  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: python-publish.yml
src/pyimage2pdf/: CommandClass.py  Preferences.py  PyImage2Pdf.py
tests/pyimage2pdf/: TestCommandClass.py  TestProofOfConcept.py  TestPyImage2Pdf.py
tests/resources/: testLoggingConfiguration.json
